--- a/about.yml
+++ b/about.yml
@@ -1,16 +1,10 @@
 ---
-# Если хотите пояснить код, можно добавить комментарий с помощью символа #
-name: Ilona Maskova # Ваше имя
+name: Анастасия Столяр
 job: QA Engineer
 level: junior
-email: ilona@hexlet.io
+email: anastasiya.korshunova.95@mail.ru
 description: |
-  Этот текст — описание в свободной форме. Здесь можно рассказать пару интересных фактов про себя.
 
-  Текст можно написать в несколько абзацев
-skills: # Список навыков в виде списка, можете написать сюда что-то свое
+skills:
   - Функциональное тестирование
   - Написание багрепортов
-  - Linux
-  - Слепая печать
-  - Английский язык C1
