--- a/bugreports.yml
+++ b/bugreports.yml
@@ -1,7 +1,53 @@
 ---
 - summary: |
 environment: |
+Google Chrome Версия 128.0.6613.137 (Официальная сборка), (64 бит)
+ОС Windows 10 Домашняя 20H2
 steps-to-reproduce: |
+Зайти на страницу магазина https://hexlet-products-store.vercel.app/
 exspected-result: |
 actual-result: |
 
+- summary: |
+Некорректное отображение товаров на первой странице при возврате на нее через кнопку Previous
+environment: |
+Google Chrome Версия 128.0.6613.137 (Официальная сборка), (64 бит)
+ОС Windows 10 Домашняя 20H2
+steps-to-reproduce: |
+Зайти на страницу магазина https://hexlet-products-store.vercel.app/
+Пролистать через кнопку Next 6 раз до последней страницы католога товаров
+Пролистать 6 раз через кнопку Previous до первой страницы каталога товаров
+exspected-result: |
+Отображается такой же список товаров, который был при первичной загрузке каталога товаров
+actual-result: |
+Отображается список товаров с 19-го по 48-ой. Товар с 1-го по 18-ый не отображается. 
+Приложен скриншот ошибки bagPrevious.png
+
+- summary: |
+Сайт не адаптирован под мобильное устройство
+environment: |
+Google Chrome Версия 128.0.6613.137 (Официальная сборка), (64 бит)
+ОС Windows 10 Домашняя 20H2
+steps-to-reproduce: |
+Зайти на страницу магазина https://hexlet-products-store.vercel.app/
+Через панель DevTools выбрать адаптивность под мобильное устройство со стандартными значеними по ширене 375px
+exspected-result: |
+Сайт адаптивен, все значки и элементы отображаются корректно
+actual-result: |
+Сайт не адаптивен под мобильное утройство.
+Сначала отображается фильтр каталога товаров, сам каталог товаров съехал вниз
+
+- summary: |
+Не отображается изображение флага напротив языка English при нажатии на кнопку Language
+environment: |
+Google Chrome Версия 128.0.6613.137 (Официальная сборка), (64 бит)
+ОС Windows 10 Домашняя 20H2
+steps-to-reproduce: |
+Зайти на страницу магазина https://hexlet-products-store.vercel.app/
+Нажать на кнопку Language
+exspected-result: |
+В выпадающем списке напротив языка отображается флаг страны
+actual-result: |
+Напроиив языка English не отображается флаг
+Ссылка на изображение не добавлена
+Приложен скриншот ошибки bagLanguage.png
