--- a/bugreports.yml
+++ b/bugreports.yml
@@ -21,7 +21,7 @@ exspected-result: |
 Отображается такой же список товаров, который был при первичной загрузке каталога товаров
 actual-result: |
 Отображается список товаров с 19-го по 48-ой. Товар с 1-го по 18-ый не отображается. 
-Приложен скриншот ошибки bagPrevious.png
+Приложен скриншот ошибки Screenshot Bug/bagPrevious.png
 
 - summary: |
 Сайт не адаптирован под мобильное устройство
@@ -50,4 +50,4 @@ exspected-result: |
 actual-result: |
 Напроиив языка English не отображается флаг
 Ссылка на изображение не добавлена
-Приложен скриншот ошибки bagLanguage.png
+Приложен скриншот ошибки Screenshot Bug/bagLanguage.png
