--- a/test-cases.yml
+++ b/test-cases.yml
@@ -114,6 +114,22 @@ expected-result: |
 Товар Apple удален из корзины
 
 - symmary: |
+Обработка заказа пользователя
+requirement: |
+При нажатии на кнопку Checkout, заказ пользователя обрабатывается без ошибок
+prerequisites: |
+Открыта корзина магазина
+test-data: |
+товар = apple
+steps: |
+В каталоге товара находим товар Apple
+Нажимаем добавить в корзину
+Переходим в Cart
+Нажимаем Checkout
+expected-result: |
+Появляется сообщение об успешном заказе пользователя. Данные обрабатываются без ошибок
+
+- symmary: |
 Удаление товаров из корзины кнопкой Clear cart
 requirement: |
 При нажатии на кнопку Clear cart все товары удаляются из корзины
