--- a/regress-report.yml
+++ b/regress-report.yml
@@ -50,35 +50,35 @@ test-cases:
 
   - summary: |
       Отправка оформленного заказа
-    status: fall
+    status: fail
 
 bugreports:
   - summary: |
       При деактивации чек-бокса In Stock отображается товар, которого нет в наличии
-    environment: |
+  environment: |
       Google Chrome Версия 128.0.6613.137 (Официальная сборка), (64 бит)
       ОС Windows 10 Домашняя 20H2
-    steps-to-reproduce: |
-      1. Зайти на страницу магазина https://products-store-git-v2bugfixes-hexlet-components.vercel.app/
-      2. Деактивировать кнопку In Stock
-    exspected-result: |
-      Отображается товар, которого нет в наличии
-    actual-result: |
-      Отображается товар, который есть в наличии
-      Пропадает кнопка Next
-      Приложен скриншот ошибки Screenshot Bug/bugInStock.png
-      Приложен скриншот ошибки Screenshot Bug/bugNext.png
+  steps-to-reproduce: |
+    1. Зайти на страницу магазина https://products-store-git-v2bugfixes-hexlet-components.vercel.app/
+    2. Деактивировать кнопку In Stock
+  exspected-result: |
+    Отображается товар, которого нет в наличии
+  actual-result: |
+    Отображается товар, который есть в наличии
+    Пропадает кнопка Next
+    Приложен скриншот ошибки Screenshot Bug/bugInStock.png
+    Приложен скриншот ошибки Screenshot Bug/bugNext.png
 
   - summary: |
-      Страница магазина перезагружается если нажать на название магазина Hexlet Store
-    environment: |
-      Google Chrome Версия 128.0.6613.137 (Официальная сборка), (64 бит)
-      ОС Windows 10 Домашняя 20H2
-    steps-to-reproduce: |
-      1. Зайти на страницу магазина https://products-store-git-v2bugfixes-hexlet-components.vercel.app/
-      2. Открыть карточку любого товара или Cart 
-      3. Нажать на название магазина Hexlet Store
-    exspected-result: |
-      Пользователя возвращает на страницу магазина без перезагрузки страницы
-    actual-result: |
-      Страница магазина обновляется
+    Страница магазина перезагружается если нажать на название магазина Hexlet Store
+  environment: |
+    Google Chrome Версия 128.0.6613.137 (Официальная сборка), (64 бит)
+    ОС Windows 10 Домашняя 20H2
+  steps-to-reproduce: |
+    1. Зайти на страницу магазина https://products-store-git-v2bugfixes-hexlet-components.vercel.app/
+    2. Открыть карточку любого товара или Cart 
+    3. Нажать на название магазина Hexlet Store
+  exspected-result: |
+    Пользователя возвращает на страницу магазина без перезагрузки страницы
+  actual-result: |
+    Страница магазина обновляется
