--- a/about.yml
+++ b/about.yml
@@ -4,6 +4,7 @@ job: QA Engineer
 level: junior
 email: anastasiya.korshunova.95@mail.ru
 description: |
+Только учусь тестить
 
 skills:
   - Функциональное тестирование
