--- a/test-cases.yml
+++ b/test-cases.yml
@@ -6,11 +6,11 @@
   prerequisites: |
     Открыта страница магазина
   test-data: |
-    Товар = Kiwi
+    Товар = "Kiwi"
   steps: |
     - Вводим название товара
   expected-result: |
-    Отображается товар Kiwi
+    Отображается товар "Kiwi"
 
 - symmary: |
     Проверка работы фильтра по категориям товара
@@ -22,9 +22,9 @@
     Категория = furniture
   steps: |
     - Нажимаем на категории
-    - Из выпадающего списка выбираем категорию furniture
+    - Из выпадающего списка выбираем категорию "furniture"
   expected-result: |
-    Отображаются товары из категории furniture
+    Отображаются товары из категории "furniture"
 
 - symmary: |
     Проверка поиска товаров при помощи фильтра по бренду
@@ -52,7 +52,7 @@
   steps: |
     - Деактивировать чек-бокс In Stock
   expected-result: |
-    На странице отображается сообщение Nothing found!
+    На странице отображается сообщение "Nothing found!"
 
 - symmary: |
     Проверка работы фильтра по стоимости товара
@@ -109,7 +109,7 @@
   steps: |
     - Добавить товар в корзину
     - Нажать кнопку Cart
-    - Напротив товара Apple нажать кнопу Delete 
+    - Напротив товара "Apple" нажать кнопу Delete 
   expected-result: |
     Товар Apple удален из корзины
 
@@ -163,7 +163,7 @@
 - symmary: | 
     Проверка работоспособности кнопки Checkout
   requirement: |
-    При нажатии на кнопку Checkou, у пользователя появляется окно Order placed successfully
+    При нажатии на кнопку Checkou, у пользователя появляется окно "Order placed successfully"
   prerequisites: |
     Открыта страница магазина
   test-data: |
@@ -173,7 +173,7 @@
     - Нажать на кнопку Cart
     - Нажать на кнопку Checkout
   expected-result: |
-    Выводится окно Order placed successfully, содержащее название товара, количество и стоимость
+    Выводится окно "Order placed successfully", содержащее название товара, количество и стоимость
 
 - symmary: |
     Проверка счетчика товаров Cart
