--- a/test-cases.yml
+++ b/test-cases.yml
@@ -1,5 +1,5 @@
----  
-- symmary: |
+---
+- summary: |
     Поиск товара по ключевому слову в строке "Поиск"
   requirement: |
     При вводе ключевого слова в строку "поиск" должен отображаться товар, содержащий в описании или наименовании данное слово
@@ -7,26 +7,26 @@
     no data
   test-data: |
     Товар = "Kiwi"
-  steps: |
+  steps:
     - Вводим название товара, например "Kiwi"
   expected-result: |
     Отображается товар "Kiwi"
 
-- symmary: |
+- summary: |
     Проверка работы фильтра по категориям товара
   requirement: |
     При выборе категории отображается товар, соответствующий данной категории
-  prerequisites: |
+  prerequisites:
     no data
   test-data: |
     no data
-  steps: |
+  steps:
     - Нажимаем на категории
     - Из выпадающего списка выбираем любую категорию, например "furniture"
   expected-result: |
     Отображаются товары из выбранной категории
 
-- symmary: |
+- summary: |
     Проверка поиска товаров при помощи фильтра по бренду
   requirement: |
     При выборе фильтра по бренду, будет отображаться товар данного бренда
@@ -34,25 +34,25 @@
     no data
   test-data: |
     no data
-  steps: |
+  steps:
     - Активировать в фильтре чек-бокс любого бренда, например brand Chanel
   expected-result: |
     Отображается товар выбранных брендов
 
-- symmary: |
+- summary: |
     Проверка работоспособности чек-бокса In Stock
   requirement: |
     При деактивации чек-бокса In Stock должен отображаться товар которого нет в наличии
-  prerequisites: |
+  prerequisites:
     no data
   test-data: |
     no data
-  steps: |
+  steps:
     - Деактивировать чек-бокс In Stock
   expected-result: |
     На странице отображается сообщение "Nothing found!"
 
-- symmary: |
+- summary: |
     Проверка работы фильтра по стоимости товара
   requirement: |
     При выборе диапозона стоимости товара, будет отображаться товар, соответствующий ценновому диапозону
@@ -61,181 +61,177 @@
   test-data: |
     Значение поля From = 50
     Значение поля To = 999999
-  steps: |
+  steps:
     - В поле From ввести значение 50
     - В поле To ввести значение 999999
   expected-result: |
     Отображается товар, соответствующий ценовому диапозону от 50 до 999999
 
-- symmary: |
+- summary: |
     Проверка работы фильтра по стоимости товара
   requirement: |
     При выборе отрицательной стоимости товара отображается ошибка
-  prerequisites: |
+  prerequisites:
     no data
   test-data: |
     Значение поля To = -1
-  steps: |
+  steps:
     - Вводим в поле To значение -1
   expected-result: |
     Отображается ошибка, сообщающая о неверном формате стоимости
-
-- symmary: |
+    
+- summary: |
     Проверка работоспособности возможности просматривать карточку товара
   requirement: |
     При нажатии на карточку товара, выводится подробная информация о выбранном товаре
   prerequisites: |
     no data
   test-data: |
-    Карточка товара = Powder Canister
-  steps: |
-    - Нажать на карточку товара с названием Powder Canister
+    no data
+  steps:
+    - Нажать на любую карточку товара, например Powder Canister
   expected-result: |
-    Открывается страница с информацией о товаре Powder Canister
+    Открывается страница с информацией о товаре
 
-- symmary: |
+- summary: |
     Удаление товара из корзины кнопкой Delete
   requirement: |
     При нажатии на кнопку Delete удалятся товар, который необходимо удалить
-  prerequisites: |
+  prerequisites:
     no data
   test-data: |
-    Товар = Powder Canicter
-    Товар = Red Nail Polish
-    Товар = Dior J'adore
-    Товар = Apple
-  steps: |
-    - Добавить товар в корзину
+    no data
+  steps:
+    - Добавить любой товар в корзину
     - Нажать кнопку Cart
-    - Напротив товара "Apple" нажать кнопу Delete 
+    - Напротив выбранного товара нажать кнопу Delete
   expected-result: |
-    Товар Apple удален из корзины
-
-- symmary: |
+    Товар удален из корзины
+    
+- summary: |
     Обработка заказа пользователя
   requirement: |
     При нажатии на кнопку Checkout, заказ пользователя обрабатывается без ошибок
   prerequisites: |
-    Открыта корзина магазина
+    no data
   test-data: |
-    товар = apple
-  steps: |
-    - В каталоге товара находим товар Apple
+    no data
+  steps:
+    - В каталоге товара находим любой товар, например Apple
     - Нажимаем добавить в корзину
     - Переходим в Cart
     - Нажимаем Checkout
   expected-result: |
     Появляется сообщение об успешном заказе пользователя. Данные обрабатываются без ошибок
 
-- symmary: |
+- summary: |
     Удаление товаров из корзины кнопкой Clear cart
   requirement: |
     При нажатии на кнопку Clear cart все товары удаляются из корзины
-  prerequisites: |
+  prerequisites:
     no data
   test-data: |
-    Товар = Powder Canicter
-    Товар = Red Nail Polish
-    Товар = Dior J'adore
-    Товар = Apple
-  steps: |
-    - Добавить товар в корзину
+    no data
+  steps:
+    - Добавить любой товар в корзину, например Apple
     - Нажать на кнопку Cart
     - Нажать на кнопку Clear cart
   expected-result: |
     Товары из корзины удалены. Таблица товаров пустая
-
-- symmary: |
+     
+- summary: |
     Проверка работоспособности кнопки Continue shopping
   requirement: |
     При  нажатии на кнопку Continue shopping пользователя возвращет на страницу магазина
   prerequisites: |
-    Открыта корзина пользователя
+    no data
   test-data: |
     no data
-  steps: |
+  steps:
+    - Открыть корзину магазина, нажав кнопку Cart
     - Нажать на кнопку Continue shopping
   expected-result: |
     Пользователя перенаправляет на страницу магазина
 
-- symmary: | 
+- summary: |
     Проверка работоспособности кнопки Checkout
   requirement: |
     При нажатии на кнопку Checkou, у пользователя появляется окно "Order placed successfully"
-  prerequisites: |
+  prerequisites:
     no data
   test-data: |
-    Товар = Powder Canicter
-  steps: |
-    - Добавить товар Powder Canicter в корзину
+    no data
+  steps:
+    - Добавить любой товар в корзину, например Powder Canicter
     - Нажать на кнопку Cart
     - Нажать на кнопку Checkout
   expected-result: |
     Выводится окно "Order placed successfully", содержащее название товара, количество и стоимость
-
-- symmary: |
+    
+- summary: |
     Проверка счетчика товаров Cart
   requirement: |
-    При добавлении товаров в корзину счетчик должен отображать количество товаров, которые находятся в корзине. При добавлении увеличиваться
+    При добавлении товаров в корзину счетчик должен отображать количество товаров, которые находятся в корзине
   prerequisites: |
     no data
   test-data: |
-    Товар = Powder Canicter
-  steps: |
-    - Добавить товар Powder Canicter в корзину
-    - Еще раз добавить товар в корзину
+    no data
+  steps:
+    - Добавить любой товар в корзину, например Powder Canicter
+    - Еще раз добавить этот товар в корзину
   expected-result: |
     При добавлении товара счетчик товаров Cart увеличивается
 
-- symmary: |
+- summary: |
     Проверка возможности изменить язык в магазине через кнопку Language
   requirement: |
     При смене языка, язык интерфеса меняется на выбранный язык
-  prerequisites: |
+  prerequisites:
     no data
   test-data: |
-    Язык = Russian
-  steps: |
+    no data
+  steps:
     - Нажать на кнопку Language
     - Из выпадающего списка выбрать язык Russian
   expected-result: |
     Интерфейс магазина меняется на русский язык
-
-- symmary: |
+     
+- summary: |
     Проверка работоспособности кнопки Store
   requirement: |
-    При нажатии на кнопку стор, пользователь попадает на страницу магазина
+    При нажатии на кнопку Store, пользователь попадает на страницу магазина
   prerequisites: |
-    Открыта корзина пользователя
+    no data
   test-data: |
     no data
-  steps: |
+  steps:
+    - Открыть корзину магазина
     - Нажать на кнопку Store
   expected-result: |
     Пользователь попадает на страницу магазина
 
-- symmary: |
+- summary: |
     Проверка работоспособности кнопки Next
   requirement: |
     При нажатии на кнопку Next, открывается следующая страница каталога товаров
-  prerequisites: |
+  prerequisites:
     no data
   test-data: |
     no data
-  steps: |
+  steps:
     - Нажать на кнопку Next
   expected-result: |
-    Пользователю открывается слудующая страница католога товаров
-
-- symmary: |
+        Пользователю открывается слудующая страница католога товаров
+        
+- summary: |
     Проверка работоспособности кнопки Previous
-  requirement: | 
+  requirement: |
     При нажатии на кнопку Previous, открывается предыдущая страница каталога товаров
   prerequisites: |
     no data
   test-data: |
     no data
-  steps: |
+  steps:
     - Нажать на кнопку Previous
   expected-result: |
     Пользователю открывается предыдущая страница каталога товаров
