--- a/bugreports.yml
+++ b/bugreports.yml
@@ -2,109 +2,109 @@
 - summary: |
     Некорректное отображение товаров на первой странице при возврате на нее через кнопку Previous
   environment: |
-    Google Chrome Версия 128.0.6613.137 (Официальная сборка), (64 бит)
+    Google Chrome Версия 128.0.6613.137 (Официальная сборка) (64 бит)
     ОС Windows 10 Домашняя 20H2
   steps-to-reproduce: |
     1. Зайти на страницу магазина https://hexlet-products-store.vercel.app/
     2. Пролистать через кнопку Next 6 раз до последней страницы католога товаров
     3. Пролистать 6 раз через кнопку Previous до первой страницы каталога товаров
-  exspected-result: |
-    Отображается такой же список товаров, который был при первичной загрузке каталога товаров
+  expected-result: |
+    Отображается такой же список товаров, который был при первичной загрузке каталога товаров    
   actual-result: |
-    Отображается список товаров с 19-го по 48-ой. Товар с 1-го по 18-ый не отображается. 
-    Приложен скриншот ошибки Screenshot Bug/bagPrevious.png
+    Отображается список товаров с 19-го по 48-ой. Товар с 1-го по 18-ый не отображается
+    Ошибка изображена на скриншоте Screenshot Bug/bagPrevious.png
 
 - summary: |
     Сайт не адаптирован под мобильное устройство
   environment: |
-    Google Chrome Версия 128.0.6613.137 (Официальная сборка), (64 бит)
+    Google Chrome Версия 128.0.6613.137 (Официальная сборка) (64 бит)
     ОС Windows 10 Домашняя 20H2
   steps-to-reproduce: |
     1. Зайти на страницу магазина https://hexlet-products-store.vercel.app/
-    2. Через панель DevTools выбрать адаптивность под мобильное устройство со стандартными значеними по ширене 375px
-  exspected-result: |
-    Сайт адаптивен, все значки и элементы отображаются корректно
+    2. Через панель DevTools выбрать адаптивность под мобильное устройство со стандартными значеними по ширене 375px 
+  expected-result: |
+    Сайт адаптивен, все значки и элементы отображаются корректно    
   actual-result: |
-    Сайт не адаптивен под мобильное утройство.
+    Сайт не адаптивен под мобильное утройство
     Сначала отображается фильтр каталога товаров, сам каталог товаров съехал вниз
 
 - summary: |
     Не отображается изображение флага напротив языка English при нажатии на кнопку Language
   environment: |
-    Google Chrome Версия 128.0.6613.137 (Официальная сборка), (64 бит)
+    Google Chrome Версия 128.0.6613.137 (Официальная сборка) (64 бит)
     ОС Windows 10 Домашняя 20H2
   steps-to-reproduce: |
     1. Зайти на страницу магазина https://hexlet-products-store.vercel.app/
     2. Нажать на кнопку Language
-  exspected-result: |
-    В выпадающем списке напротив языка отображается флаг страны
+  expected-result: |
+    В выпадающем списке напротив языка отображается флаг страны    
   actual-result: |
-    Напроиив языка English не отображается флаг
+    Напротив языка English не отображается флаг
     Ссылка на изображение не добавлена
-    Приложен скриншот ошибки Screenshot Bug/bagLanguage.png
+    Ошибка изображена на скриншоте Screenshot Bug/bagLanguage.png
 
 - summary: |
-    Нельзя сбросить фильтр категории товара 
+    Нельзя сбросить фильтр категории товара
   environment: |
-    Google Chrome Версия 128.0.6613.137 (Официальная сборка), (64 бит)
+    Google Chrome Версия 128.0.6613.137 (Официальная сборка) (64 бит)
     ОС Windows 10 Домашняя 20H2
   steps-to-reproduce: |
     1. Зайти на страницу магазина https://hexlet-products-store.vercel.app/
     2. Выбррать любую категорию товара из выпадающего списка
-  exspected-result: |
-    Можно сбросить фильтр категории товара
+  expected-result: |
+    Можно сбросить фильтр категории товара    
   actual-result: |
     Фильтр товара нет возможности сбросить
 
 - summary: |
     В списке брендов чек-бокс без названия
   environment: |
-    Google Chrome Версия 128.0.6613.137 (Официальная сборка), (64 бит)
+    Google Chrome Версия 128.0.6613.137 (Официальная сборка) (64 бит)
     ОС Windows 10 Домашняя 20H2
   steps-to-reproduce: |
     1. Зайти на страницу магазина https://hexlet-products-store.vercel.app/
     2. В списке брендов отображены чек-боксы
     3. Один из чек-боксов без названия
-  exspected-result: |
-    Каждый чек-бокс имеет наименование
+  expected-result: |
+    Каждый чек-бокс имеет наименование    
   actual-result: |
-    Отображается чек-бокс без названия 
+    Отображается чек-бокс без названия
     В DevTools во вкладке Elements не задано название чек-бокса for="undefined-check"
-    Приложен скриншот ошибки Screenshot Bug/bugCheckbox.png
+    Ошибка изображена на скриншоте Screenshot Bug/bugCheckbox.png
 
 - summary: |
     В Price в строке From-To можно задать отрицательное число в графе To
   environment: |
-    Google Chrome Версия 128.0.6613.137 (Официальная сборка), (64 бит)
+    Google Chrome Версия 128.0.6613.137 (Официальная сборка) (64 бит)
     ОС Windows 10 Домашняя 20H2
   steps-to-reproduce: |
     1. Зайти на страницу магазина https://hexlet-products-store.vercel.app/
     2. В Price строка From-To задать значение в графе To -2
-  exspected-result: |
-    В Price в строке From-To можно задать только положительные значения не меньше 0
+  expected-result: |
+    В Price в строке From-To можно задать только положительные значения не меньше 0    
   actual-result: |
-    В Price строка From-To можно задать отрицательное число в графе To 
+    В Price строка From-To можно задать отрицательное число в графе To
     В DevTools во вкладке Elements не задано значение value=""
-    Приложен скриншот ошибки Screenshot Bug/bugPrice.png
+    Ошибка изображена на скриншоте Screenshot Bug/bugPrice.png
 
 - summary: |
     Фильтр товаров по цене настроен по ценам без учета скидки
   environment: |
-    Google Chrome Версия 128.0.6613.137 (Официальная сборка), (64 бит)
+    Google Chrome Версия 128.0.6613.137 (Официальная сборка) (64 бит)
     ОС Windows 10 Домашняя 20H2
   steps-to-reproduce: |
     1. Зайти на страницу магазина https://hexlet-products-store.vercel.app/
     2. В строке Price выставить цену From 12 - To 13
-  exspected-result: |
-    Отображается весь товар который соответствует диапозону цен с учетом скидки от 12 до 13 
+  expected-result: |
+    Отображается весь товар который соответствует диапозону цен с учетом скидки от 12 до 13    
   actual-result: |
     Отображается товар, соответствующий диапозону цен от 12 до 13, без учета скидки
-    Приложен скриншот ошибки Screenshot Bug/bugPriceFromTo.png
+    Ошибка изображена на скриншоте Screenshot Bug/bugPriceFromTo.png
 
 - summary: |
     При оформлении заказа в Cart, данные обрабатываются с ошибкой 500
   environment: |
-    Google Chrome Версия 128.0.6613.137 (Официальная сборка), (64 бит)
+    Google Chrome Версия 128.0.6613.137 (Официальная сборка) (64 бит)
     ОС Windows 10 Домашняя 20H2
   steps-to-reproduce: |
     1. Зайти на страницу магазина https://hexlet-products-store.vercel.app/
@@ -112,18 +112,17 @@
     3. Перейти в Cart
     4. Нажать Checkout
     5. Появляется окно об успешном заказе
-  exspected-result: |
-    Заказ оформлен
-    Данные обработаны без ошибок
+  expected-result: |
+    Данные обработаны без ошибок    
   actual-result: |
-    Заказ не офрмлен
+    Заказ не оформлен
     Данные обработаны с ошибкой 500
-    Приложен скриншот ошибки Screenshot Bug/bugOrder.png
+    Ошибка изображена на скриншоте Screenshot Bug/bugOrder.png
 
 - summary: |
     Окно после оформления заказа не закрывается через крестик
   environment: |
-    Google Chrome Версия 128.0.6613.137 (Официальная сборка), (64 бит)
+    Google Chrome Версия 128.0.6613.137 (Официальная сборка) (64 бит)
     ОС Windows 10 Домашняя 20H2
   steps-to-reproduce: |
     1. Зайти на страницу магазина https://hexlet-products-store.vercel.app/
@@ -131,62 +130,62 @@
     3. Перейти в Cart
     4. Нажать Checkout
     5. Закрыть окно через крестик
-  exspected-result: |
-    Окно закрывается через крестик
+  expected-result: |
+    Окно закрывается через крестик    
   actual-result: |
     Окно через крестик не удается закрыть
     Кнопка не активна
-    Приложен скриншот ошибки Screenshot Bug/bugClose.png
+    Ошибка изображена на скриншоте Screenshot Bug/bugClose.png
 
 - summary: |
     Во вкладке Cart количество товаров не выравнено
   environment: |
-    Google Chrome Версия 128.0.6613.137 (Официальная сборка), (64 бит)
+    Google Chrome Версия 128.0.6613.137 (Официальная сборка) (64 бит)
     ОС Windows 10 Домашняя 20H2
   steps-to-reproduce: |
     1. Зайти на страницу магазина https://hexlet-products-store.vercel.app/
     2. Добавить более одного товара в корзину
     3. Перейти в Cart
-  exspected-result: |
-    Визуальные элементы и столбцы, обозначающие название товара, количество и цену, выравнены и визуально находятся друг под другом
+  expected-result: |
+    Визуальные элементы и столбцы, обозначающие название товара, количество и цену, выравнены и визуально находятся друг под другом    
   actual-result: |
     Столбец, обозначающий количество товара, не выравнен и располагается криво
-    Приложен скриншот ошибки Screenshot Bug/bugCart.png
+    Ошибка изображена на скриншоте Screenshot Bug/bugCart.png
 
 - summary: |
     В модульном окне Order placed successfully количество товаров не выравнено
   environment: |
-    Google Chrome Версия 128.0.6613.137 (Официальная сборка), (64 бит)
+    Google Chrome Версия 128.0.6613.137 (Официальная сборка) (64 бит)
     ОС Windows 10 Домашняя 20H2
   steps-to-reproduce: |
     1. Зайти на страницу магазина https://hexlet-products-store.vercel.app/
     2. Добавить более одного товара в корзину
     3. Перейти в Cart
     4. Нажать Checkout
-  exspected-result: |
-    В модульном окне Order placed successfully столбцы, обозначающие название товара, количество и цену, выравнены и визуально находятся друг под другом
+  expected-result: |
+    В модульном окне Order placed successfully столбцы, обозначающие название товара, количество и цену, выравнены и визуально находятся друг под другом    
   actual-result: |
     В модульном окне Order placed successfully столбец, обозначающий количество товара, не выравнен
-    Приложен скриншот ошибки Screenshot Bug/bugOrderVisually.png
+    Ошибка изображена на скриншоте Screenshot Bug/bugOrderVisually.png
 
 - summary: |
     При выборе русского языка описание товара не переводится на русский язык
   environment: |
-    Google Chrome Версия 128.0.6613.137 (Официальная сборка), (64 бит)
+    Google Chrome Версия 128.0.6613.137 (Официальная сборка) (64 бит)
     ОС Windows 10 Домашняя 20H2
   steps-to-reproduce: |
     1. Зайти на страницу магазина https://hexlet-products-store.vercel.app/
     2. Во вкладке Language в выпадающем списке выбрать язык Russian
-  exspected-result: |
-    Весь интерфейс магазина переводится на русский язык
+  expected-result: |
+    Весь интерфейс магазина переводится на русский язык    
   actual-result: |
     Описание товаров в катологе не переводится на русский язык
-    Приложен скриншот ошибки Screenshot Bug/bugRussian.png
+    Ошибка изображена на скриншоте Screenshot Bug/bugRussian.png
 
 - summary: |
     После перезагрузки страницы магазина удаленный товар через кнопку Clear cart снова отображается в корзине
   environment: |
-    Google Chrome Версия 128.0.6613.137 (Официальная сборка), (64 бит)
+    Google Chrome Версия 128.0.6613.137 (Официальная сборка) (64 бит)
     ОС Windows 10 Домашняя 20H2
   steps-to-reproduce: |
     1. Зайти на страницу магазина https://hexlet-products-store.vercel.app/
@@ -194,8 +193,8 @@
     3. Нажать на кнопку Cart
     4. Нажать на кнопку Clear cart
     5. Нажать на кнопку F5
-  exspected-result: |
-    После удаления товаров кнопкой Clear cart корзина пустая и после обновления корзина остается пустой
+  expected-result: |
+    После удаления товаров кнопкой Clear cart корзина пустая и после обновления корзина остается пустой    
   actual-result: |
     После удаления товаров кнопкой Clear cart корзина пустая, после обновления страницы товары снова появляются в корзине
-    Приложен скриншот ошибки Screenshot Bug/bugClearCart.png
+    Ошибка изображена на скриншоте Screenshot Bug/bugClearCart.png
