--- a/regress-report.yml
+++ b/regress-report.yml
@@ -7,15 +7,15 @@ test-cases:
   - summary: |
       Проверка работы фильтра по категориям товара
     status: pass
-
+    
   - summary: |
       Проверка поиска товаров при помощи фильтра по бренду
     status: pass
 
   - summary: |
       Проверка работы фильтра по стоимости товара
-    status: pass
-
+    status: fail
+    
   - summary: |
       Проверка работоспособности возможности просматривать карточку товара
     status: pass
@@ -23,7 +23,7 @@ test-cases:
   - summary: |
       Удаление товара из корзины кнопкой Delete
     status: pass
-
+    
   - summary: |
       Удаление товаров из корзины кнопкой Clear cart
     status: pass
@@ -31,7 +31,7 @@ test-cases:
   - summary: |
       Проверка работоспособности кнопки Continue shopping
     status: pass
-
+    
   - summary: |
       Проверка работоспособности кнопки Checkout
     status: pass
@@ -39,7 +39,7 @@ test-cases:
   - summary: |
       Проверка счетчика товаров Cart
     status: pass
-
+    
   - summary: |
       Проверка работоспособности кнопки Store
     status: pass
@@ -47,38 +47,38 @@ test-cases:
   - summary: |
       Проверка возможности изменить язык в магазине через кнопку Language
     status: fail
-
- - summary: |
+    
+  - summary: |
       Отправка оформленного заказа
     status: fail
 
 bugreports:
   - summary: |
-    При деактивации чек-бокса In Stock отображается товар, которого нет в наличии
-  environment: |
-    Google Chrome Версия 128.0.6613.137 (Официальная сборка) (64 бит)
-    ОС Windows 10 Домашняя 20H2
-  steps-to-reproduce: |
-    1. Зайти на страницу магазина https://products-store-git-v2bugfixes-hexlet-components.vercel.app/
-    2. Деактивировать кнопку In Stock 
-  expected-result: |
-    Отображается товар, которого нет в наличии    
-  actual-result: |
-    Отображается товар, который есть в наличии
-    Пропадает кнопка Next
-    Ошибка изображена на скриншоте Screenshot Bug/bugInStock.png
-    Ошибка изображена на скриншоте Screenshot Bug/bugNext.png
-
-- summary: |
-    Страница магазина перезагружается если нажать на название магазина Hexlet Store
-  environment: |
-    Google Chrome Версия 128.0.6613.137 (Официальная сборка) (64 бит)
-    ОС Windows 10 Домашняя 20H2
-  steps-to-reproduce: |
-    1. Зайти на страницу магазина https://products-store-git-v2bugfixes-hexlet-components.vercel.app/
-    2. Открыть карточку любого товара или Cart
-    3. Нажать на название магазина Hexlet Store
-  expected-result: |
-    Пользователя возвращает на страницу магазина без перезагрузки страницы   
-  actual-result: |
-    Страница магазина обновляется
+      При деактивации чек-бокса In Stock отображается товар, которого нет в наличии
+    environment: |
+      Google Chrome Версия 128.0.6613.137 (Официальная сборка) (64 бит)
+      ОС Windows 10 Домашняя 20H2
+    steps-to-reproduce: |
+      1. Зайти на страницу магазина https://products-store-git-v2bugfixes-hexlet-components.vercel.app/
+      2. Деактивировать кнопку In Stock
+    expected-result: |
+      Отображается товар, которого нет в наличии
+    actual-result: |
+      Отображается товар, который есть в наличии
+      Пропадает кнопка Next
+      Ошибка изображена на скриншоте Screenshot Bug/bugInStock.png
+      Ошибка изображена на скриншоте Screenshot Bug/bugNext.png
+    
+  - summary: |
+      Страница магазина перезагружается если нажать на название магазина Hexlet Store
+    environment: |
+      Google Chrome Версия 128.0.6613.137 (Официальная сборка) (64 бит)
+      ОС Windows 10 Домашняя 20H2
+    steps-to-reproduce: |
+      1. Зайти на страницу магазина https://products-store-git-v2bugfixes-hexlet-components.vercel.app/
+      2. Открыть карточку любого товара или Cart
+      3. Нажать на название магазина Hexlet Store
+    expected-result: |
+      Пользователя возвращает на страницу магазина без перезагрузки страницы
+    actual-result: |
+      Страница магазина обновляется
