--- a/requirements.yml
+++ b/requirements.yml
@@ -15,3 +15,5 @@ implicit:
   - Недоступность к заказу товара, которого нет в наличии
   - Возможность регистрации пользователя по email или номеру телефона
   - При открытии магазина в новой вкладке сессия не прекращается
+  - Отображаются покупки, которые уже совершал пользователь
+  - Возможность повторить заказ, который ранее был совершен пользователем
