--- a/test-cases.yml
+++ b/test-cases.yml
@@ -50,7 +50,7 @@
   steps:
     - Деактивировать чек-бокс In Stock
   expected-result: |
-    На странице отображается сообщение "Nothing found!"
+    На странице отображаются товары, которых нет в наличии
 
 - summary: |
     Проверка работы фильтра по стоимости товара
@@ -65,10 +65,10 @@
     - В поле From ввести значение 50
     - В поле To ввести значение 999999
   expected-result: |
-    Отображается товар, соответствующий ценовому диапозону от 50 до 999999
+    Отображается товар, соответствующий ценновому диапозону от 50 до 999999
 
 - summary: |
-    Проверка работы фильтра по стоимости товара
+    Проверка ввода цены с отрицательным значением в фильтре стоимости товара
   requirement: |
     При выборе отрицательной стоимости товара отображается ошибка
   prerequisites:
@@ -153,21 +153,6 @@
   expected-result: |
     Пользователя перенаправляет на страницу магазина
 
-- summary: |
-    Проверка работоспособности кнопки Checkout
-  requirement: |
-    При нажатии на кнопку Checkou, у пользователя появляется окно "Order placed successfully"
-  prerequisites:
-    no data
-  test-data: |
-    no data
-  steps:
-    - Добавить любой товар в корзину, например Powder Canicter
-    - Нажать на кнопку Cart
-    - Нажать на кнопку Checkout
-  expected-result: |
-    Выводится окно "Order placed successfully", содержащее название товара, количество и стоимость
-    
 - summary: |
     Проверка счетчика товаров Cart
   requirement: |
