--- a/testing-report.yml
+++ b/testing-report.yml
@@ -18,7 +18,11 @@
 - summary: |
     Проверка работы фильтра по стоимости товара
   status: pass
-
+  
+- summary: |
+    Проверка ввода цены с отрицательным значением в фильтре стоимости товара
+  status: fail
+  
 - summary: |
     Проверка работоспособности возможности просматривать карточку товара
   status: pass
@@ -37,10 +41,6 @@
 
 - summary: |
     Проверка работоспособности кнопки Continue shopping
-  status: pass
-
-- summary: |
-    Проверка работоспособности кнопки Checkout
   status: pass
 
 - summary: |
